Adding the new generated sdk with validation roite change
