# model_models_alert.go
@@ -1,24 +1,0 @@
-/*
- * SendPost API
- *
- * SendPost API to send transactional emails reliably
- *
- * API version: 1.0.0
- * Contact: hello@sendx.io
- * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
- */
-
-package swagger
-
-type ModelsAlert struct {
-	Condition string `json:"Condition,omitempty"`
-	Notification string `json:"Notification,omitempty"`
-	Active bool `json:"active,omitempty"`
-	AlertName string `json:"alert_name,omitempty"`
-	Created int64 `json:"created,omitempty"`
-	Id int64 `json:"id,omitempty"`
-	Label *ModelsAlertLabel `json:"label,omitempty"`
-	Member *ModelsMember `json:"member,omitempty"`
-	Priority *ModelsPriority `json:"priority,omitempty"`
-	Updated int64 `json:"updated,omitempty"`
-}
